# EXACT

./: .env.template  .gitignore  README.md  context.md  main.py  pyproject.toml  session_summary.md
data/: fol_failed_cases.json  folio-train.json  folio-train.jsonl  notation_mapping.csv  physic.csv  physics_results_python.json  preprocess_folio.py  preprocess_logic.ipynb  preprocess_logic.py  preprocess_physics.ipynb  preprocess_physics.py  process.ipynb  processed.md  standardize_prompt.md
results/: evaluation_logic_200.json
results_test/: adapter_config.json
results_verify/: README.md  adapter_config.json
runs/: fail_questions.jsonl  physics_failures.json  physics_heuristics.md
scratch/: add_call_cell.py  add_zip_cell.py  analysis_metrics.json  analyze_additional_metrics.py  analyze_all_datasets.py  analyze_all_mismatches.py  analyze_all_mismatches_v2.py  analyze_augmented_details.py  analyze_casing_by_source.py  analyze_dataset.py  analyze_datasets.py  analyze_datasets_distribution.py  analyze_errors.py  analyze_fail_qa_correct.py  analyze_fail_reasons.py  analyze_failures_utf8.py  analyze_individual_mismatches.py  analyze_logic_details.py  analyze_mismatch_types.py  analyze_non_unknown_failures.py  analyze_router_dataset.py  analyze_stats.py  analyze_template_patterns.py  apply_z3_override.py  calculate_router_token_lengths.py  calculate_token_lengths.py  check_348_0.py  check_378_0.py  check_api_endpoint.py  check_comparisons.py  check_dataset_consistency.py  check_dataset_splits.py  check_example_16_0.py  check_gt_parse.py  check_mismatched.py  check_parents.py  check_qa_correctness_counts.py  check_raw_16_0.py  check_raw_alignment.py  check_templates.py  (+153 more)
scripts/: augment_dataset.py  auto_repair_final_34.py  auto_repair_qualitative_28.py  auto_repair_self_correct_28.py  check_original_dataset_uniqueness.py  check_original_premises_uniqueness.py  clean_train_fol_labels.py  clean_val_fol_labels.py  direct_database_patch.py  example_router_pipeline.py  explain_repair_strategies.py  extract_phys_templates.py  final_few_shot_repair.py  fix_domains.py  (+22 more)
(+180 files in other folders)
