[project]
name = "exact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "openai>=2.36.0",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "pint>=0.25.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "sympy>=1.14.0",
    "transformers>=5.8.1",
    "trl>=1.4.0",
    "z3-solver>=4.16.0.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
